media/css/zamboni/zamboni.css
/* ... */
.personas-grid li .details .users b {
    font-weight: bold;
}
.html-rtl .personas-grid li .details .users {
    margin-left: 0;
    margin-right: 1em;
}

/** White category list **/
.other-categories ul {
    margin: 0;
}

.other-categories ul + ul,
.other-categories .divider {
    border-top: 1px dotted #94BFCE;
    margin-top: 1em;
    padding-top: 1em;
}

.other-categories ul li {
    padding: 0 1em;
    font-size: 1.05em;
}

#search-tools-sidebar h3 {
    margin-bottom: 0.55em;
}

#search-tools-sidebar h4 {
    margin-top: 0;
    margin-bottom: 0.55em;
    font-style: italic;
    font-family: georgia, serif;
    font-size: 1.0em;
    font-weight: normal;
    color: #565656;
}

/** Add-on detail page buttons. **/
#addon-summary .install-shell .install {
    float: left;
    clear: both;
}

.html-rtl #addon-summary .install-shell .install {
    float: right;
}

#addon-summary .install-shell .notavail {
    clear: both;
}

.install-wrapper {
    margin-bottom: 1.5em;
    -moz-border-radius: 6px;
    -webkit-border-radius: 6px;
    border-radius: 6px;
}

.install-shell {
    display:inline-block;
}

.install-wrapper .warning {
    clear: both;
    padding: 0 4px;
    margin: 0;
}

.privacy-policy {
    display: inline-block;
}

.install-wrapper .extra {
    border-top: 1px dotted #A5C9D5;
    padding-top: 6px;
}

/* Disable styling for stacked .extras. */
.install-wrapper .extra + .extra {
    border: none;
    padding: 0;
}

.install-wrapper.unreviewed .extra {
    border-top: 1px dotted #AA7700;
}

.install-wrapper.unreviewed .install strong,
.install-wrapper.selfhosted .install strong {
    display: none;
}

.install-wrapper.unreviewed .install-note strong,
.install-wrapper.selfhosted .install-note strong {
    display: inherit;
}

.install-wrapper.unreviewed,
.install-wrapper.selfhosted {
    padding: 0.4em;
}

.install-wrapper.selfhosted {
    background: #D3ECF6;
}

.install-wrapper.unreviewed {
    background: #FFE57F;
}

.aux .button-wrapper {
    float: left;
    margin: 0;
    padding: 0.1em 0 1.5em;
}

/** Add-on listing on the homepage. */
.listing.compact .item blockquote {
    padding: 0;
}

.listing.compact .item .install-shell,
.listing.compact .item .install {
    float: right;
    margin-left: 10px;
}

.html-rtl .listing.compact .item .install-shell,
.html-rtl .listing.compact .item .install {
    float: left;
    margin-left: 0;
    margin-right: 10px;
}

.listing.compact .item h3 {
    float: none;
}

#addon-summary .addon-rating,
.listing.compact .item .meta .addon-rating,
.listing.compact .item .meta .downloads,
.listing.compact .item .meta .updated {
    display: inline;
}

.listing.compact .item blockquote {
    clear: both;
}

#discovery-modules .ordering input {
    width: 2em;
}

#discovery-modules .module {
    font-weight: bold;
}

#discovery-modules .locales input {
    width: 20em;
}

/* Carousel arrows for personas carousel */

.personas-home ol.breadcrumbs {
    clear:none; /*don't want breadcrumbs clearing floats in this module*/
}

.arrow {
    display: block;
    float: right;
    width: 24px;
    height: 24px;
    border: 1px solid #7fcbd8;
    -moz-border-radius: 13px;
    cursor: pointer;
    text-indent: -999px;
    background: white;
    position: absolute;
    right: 108px;
    overflow: hidden;
}

.arrow.prev {
    top: -15px;
}

.arrow.next {
    top: 355px;
}

.arrow:before {
    content: "\00a0";
    display: block; /* reduce the damage in FF3.0 */
    position: absolute;
    width: 0;
    height: 0;
    border: 6px solid transparent;
    border-style: solid;
}

.arrow.prev:before {
    left: 6px;
    top: 2px;
    border-bottom-color: #0471ed;
}

.arrow.next:before {
    left: 6px;
    top: 9px;
    border-top-color: #0471ed;
}

.other-note {
    display: none;
    clear: left;
    padding: .25em 0 0 1em;
    margin: 0;
}
.other-note input[type='text'] {
    width: 150px;
}
.other-note input[type='submit'] {
    margin-top: -2px;
}
.other .other-note,
.review-reason a {
    display: block;
}

/** Reviews *********/

ul.review-options {
    float: right;
    font-size: .9em;
    margin-top: 1em;
    margin-bottom: 2px;
    color: #aaa;
}
ul.review-options > li {
    float: left;
}
.review ul.review-options > li > a {
    font-weight: normal;
    color: #aaa;
    -moz-transition: color .2s;
    -webkit-transition: color .2s;
    transition: color .2s;
}
ul.review-options > li:not(:first-child) {
    list-style-type: disc;
    margin-left: 1.6em;
}
.article.review {
    margin-bottom: 1em;
    -moz-border-radius: 8px;
    -webkit-border-radius: 8px;
    border-radius: 8px;
    overflow: visible;
}
.review h5 {
    float: left;
    margin-right: .8em;
    font-size: 120%;
}
.html-rtl .review h5 {
    float: right;
    margin-right: inherit;
    margin-left: .8em;
}
.review p {
    margin: 1em 0 0 0;
}
.review .reviewed-on {
    clear: left;
    font-size: .9em;
}
.html-rtl .review .reviewed-on {
    clear: right;
}
.review.deleted {
    display: none;
}
h6.author, .author a {
    font-weight: normal;
}
.reviews .highlight > span {
    display: block;
}
.reviews .highlight hgroup {
    display: block;
    margin-bottom: 1em;
}
.reviews .highlight > div {
    margin: 0;
    padding: 1em .2em;
    border-top: 1px dashed #ccc;
    font-size: .9em;
}
.reviews .highlight > div:last-child {
    text-align: center;
    padding-bottom: 0;
}

.average_rating {
    margin: 0 .2em;
}

.average_rating .stars {
    margin-right: .9em;
}

.article .review-detail .show-more {
    font-weight: normal;
    float: right;
}

/* grouped ratings style */

.grouped_ratings .rating_bar {
    border-left: 1px solid black;
    margin-left: 72px;
    padding-right: 4em;
    height: 2em;
}

.grouped_ratings li {
    margin: 0;
    overflow: hidden;
    height: 2em;
}

.grouped_ratings .rating_bar span.bar {
    display: block;
    background: #acd;
    float: left;
    margin: .4em .5em 0 0;
    height: .9em;
    position: relative;
}
/* ... */

